# cs32fp

./: README.md  app.py  design.py  example_questions.txt  game.py  pyproject.toml  team.py  themes.py
cs32fp/templates/: index.html  play.html  question.html
cs32fp/themed_q_a/: Brain_Teasers_qa.txt  Famous_Alumni_qa.txt  Name_that_Movie_qa.txt  Tennis_qa.txt  True_or_False_qa.txt
templates/: end.html
themed_q_a/: Brain_Teasers_qa.txt  Countries_and_Capitals_qa.txt  Crimson-Sports_qa.txt  Famous_Books_qa.txt  Harvard_CS_qa.txt  History_of_Women_qa.txt  States_and_Capitals_qa.txt  World_History_qa.txt
